--- a/src/campusLifeTest/test2.html
+++ b/src/campusLifeTest/test2.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,8 +24,8 @@
                     <img src="/image/campusLifeTest/test2.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test3.html'">학교 내부에 있을 만한 곳을 찾아다닌다.</button>
-                    <button class="answer" onclick="location.href='test3.html'">알고 있는 주변 카페로 향한다.</button>
+                    <button class="answer" onclick="calc(false,3)">학교 내부에 있을 만한 곳을 찾아다닌다.</button>
+                    <button class="answer" onclick="calc(true,3)">알고 있는 주변 카페로 향한다.</button>
                 </div>
             </div>
             <div class="body_footer">
