--- a/src/campusLifeTest/test3.html
+++ b/src/campusLifeTest/test3.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,8 +24,8 @@
                     <img src="/image/campusLifeTest/test3.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test4.html'">학교 근처 골목 사이 사이 맛집을 찾자!</button>
-                    <button class="answer" onclick="location.href='test4.html'">학식 말고 뭐가 또 있나...?</button>
+                    <button class="answer" onclick="calc(true,4)">학교 근처 골목 사이 사이 맛집을 찾자!</button>
+                    <button class="answer" onclick="calc(false,4)">학식 말고 뭐가 또 있나...?</button>
                 </div>
             </div>
             <div class="body_footer">
