--- a/src/campusLifeTest/test4.html
+++ b/src/campusLifeTest/test4.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,9 +24,9 @@
                     <img src="/image/campusLifeTest/test4.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test5.html'">도서관은 시험 기간에만 24시간이었지...?<br/>
+                    <button class="answer" onclick="calc(true,5)">도서관은 시험 기간에만 24시간이었지...?<br/>
                         스터디 카페에 갈래래</button>
-                    <button class="answer" onclick="location.href='test5.html'">도서관은 늘 24시간 개방이잖아?<br/>
+                    <button class="answer" onclick="calc(false,5)">도서관은 늘 24시간 개방이잖아?<br/>
                         역시 대학생은 도서관이지!</button>
                 </div>
             </div>
