--- a/src/campusLifeTest/test6.html
+++ b/src/campusLifeTest/test6.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,8 +24,8 @@
                     <img src="/image/campusLifeTest/test6.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test7.html'">역시 우리 학교 에브리** 커뮤니티가 최고지!</button>
-                    <button class="answer" onclick="location.href='test7.html'">흠... 교내 일자리 지원센터로 가 볼까?</button>
+                    <button class="answer" onclick="calc(false,7)">역시 우리 학교 에브리** 커뮤니티가 최고지!</button>
+                    <button class="answer" onclick="calc(true,7)">흠... 교내 일자리 지원센터로 가 볼까?</button>
                 </div>
             </div>
             <div class="body_footer">
