--- a/src/campusLifeTest/test7.html
+++ b/src/campusLifeTest/test7.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,8 +24,8 @@
                     <img src="/image/campusLifeTest/test7.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test8.html'">공간엔 휴식이지! 침대가 있는 휴게실에 가자</button>
-                    <button class="answer" onclick="location.href='test8.html'">‘휴게실이 어디...?’ <br/>
+                    <button class="answer" onclick="calc(true,8)">공간엔 휴식이지! 침대가 있는 휴게실에 가자</button>
+                    <button class="answer" onclick="calc(false,8)">‘휴게실이 어디...?’ <br/>
                         일단 도서관으로 향한다</button>
                 </div>
             </div>
