--- a/src/clubTest/test4.html
+++ b/src/clubTest/test4.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,10 +24,10 @@
                     <img src="/image/clubTest/test4.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test5.html'">
+                    <button class="answer"  onclick="calc(F,5)">
                         와 누구야? 왜 그러신대? 너 진짜 힘들겠다...
                     </button>
-                    <button class="answer" onclick="location.href='test5.html'">
+                    <button class="answer"  onclick="calc(T,5)">
                         그럴 때는 직접 대화해서 해결해 보는 건 어때?
                     </button>
                 </div>
