--- a/src/clubTest/test7.html
+++ b/src/clubTest/test7.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,10 +24,10 @@
                     <img src="/image/clubTest/test7.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test8.html'">
+                    <button class="answer"  onclick="calc(T,8)">
                         내 일에 직접적으로 상관없으니 별 관심없다.                    
                     </button>
-                    <button class="answer" onclick="location.href='test8.html'">
+                    <button class="answer"  onclick="calc(F,8)">
                         적극적으로 기사를 찾아보고<br/>
                         해결책을 생각해 본다.</button>
                 </div>
