--- a/src/clubTest/test8.html
+++ b/src/clubTest/test8.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,11 +24,11 @@
                     <img src="/image/clubTest/test8.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test1.html'">
+                    <button class="answer"  onclick="goTo(E)">
                         음? 오히려 좋아. <br/>
                         발표... 맡겨 줘!
                     </button>
-                    <button class="answer" onclick="location.href='test1.html'">
+                    <button class="answer" onclick="goTo(I)">
                         으... 발표 싫어. 제발 누군가 해 줘...
                     </button>
                 </div>
