--- a/src/campusLifeTest/test10.html
+++ b/src/campusLifeTest/test10.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,11 +24,11 @@
                     <img src="/image/campusLifeTest/test10.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test1.html'">
+                    <button class="answer" onclick="goTo(false)">
                         공간보단 학교에 나와서 동기들과 활동하고<br/>
                         수업 듣는 게 좋은데?
                     </button>
-                    <button class="answer" onclick="location.href='test1.html'">
+                    <button class="answer" onclick="goTo(true)">
                         월공강, 금공강... 그런 것보다는<br/>
                         역시 공강은 다다익선이지.
                     </button>
