--- a/src/campusLifeTest/test5.html
+++ b/src/campusLifeTest/test5.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,8 +24,8 @@
                     <img src="/image/campusLifeTest/test5.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test6.html'">당연히 가능하지!</button>
-                    <button class="answer" onclick="location.href='test6.html'">흠... 안 될 것 같아.</button>
+                    <button class="answer" onclick="calc(true,6)">당연히 가능하지!</button>
+                    <button class="answer" onclick="calc(false,6)">흠... 안 될 것 같아.</button>
                 </div>
             </div>
             <div class="body_footer">
