--- a/src/campusLifeTest/test8.html
+++ b/src/campusLifeTest/test8.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,11 +24,11 @@
                     <img src="/image/campusLifeTest/test8.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test9.html'">
+                    <button class="answer" onclick="calc(false,9)">
                         ‘지름길이 있어...?’ <br/>
                         부지런히 지도 보며 걸어다닌다.
                     </button>
-                    <button class="answer" onclick="location.href='test9.html'">
+                    <button class="answer" onclick="calc(true,9)">
                         ‘학교 내 최소 경로 이동은 국룰!’<br/>
                         나만의 지름길을 통해 강의실로 이동한다.
                     </button>
