--- a/src/campusLifeTest/test9.html
+++ b/src/campusLifeTest/test9.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,8 +24,8 @@
                     <img src="/image/campusLifeTest/test9.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test10.html'">많이 참여해 보지 않아서 잘 모른다.</button>
-                    <button class="answer" onclick="location.href='test10.html'">후후. 내 최애는 축제다.</button>
+                    <button class="answer" onclick="calc(false,10)">많이 참여해 보지 않아서 잘 모른다.</button>
+                    <button class="answer" onclick="calc(true,10)">후후. 내 최애는 축제다.</button>
                 </div>
             </div>
             <div class="body_footer">
