--- a/src/clubTest/test6.html
+++ b/src/clubTest/test6.html
@@ -4,6 +4,7 @@
     <title>MyU_Test</title>
     <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./score.js"></script>
 </head>
 <body>
     <div class="background">
@@ -23,10 +24,10 @@
                     <img src="/image/clubTest/test6.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test7.html'">
+                    <button class="answer"  onclick="calc(S,7)">
                         흥얼거리거나 속으로 따라 부른다.<br/>
                         ‘unforgiven... unforgiven ~ ‘</button>
-                    <button class="answer" onclick="location.href='test7.html'">
+                    <button class="answer"  onclick="calc(N,7)">
                         노래에 맞추어 조금씩 리듬을 탄다. <br/>
                         Yo... music is my life...
                     </button>
