feat : 메인페이지UI & 테스트2결과 페이지 UI 구현 중

--- a/src/main/main.html
+++ b/src/main/main.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <p>여기는 메인페이지 내용이 들어올 곳이에요!</p>
-  </body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="main.css">
+	<title>MainPage</title>
+</head>
+
+<body>
+	<section>
+		<div class="header">
+			<div class="logo">My-U</div>
+			<div class="longLine"></div>
+			<div class="midLine"></div>
+			<div class="shortLine"></div>
+			<div class="loginButton">로그인</div>
+		</div>
+
+	</section>
+	<section>
+		<img class="maruImg" src="marumari.png" alt="">
+	</section>
+
+	<div class="container">
+		<div class="formy">명지인을 위한 심리 테스트</div>
+		<div class="itemBox">
+			<div class="leftBox">
+				<img class="univImg" src="univImg.png" alt="">
+				<div class="univType">대학생 유형 테스트 <img class="arrow" src="arrow.png" alt=""></div>
+			</div>
+			<div class="rightBox">
+				<img class="rectangleImg" src="clubImg.png" alt="">
+				<div class="ready"> 동아리 테스트<img class="arrow" src="arrow.png" alt=""></div>
+			</div>
+		</div>
+
+	</div>
+
+	<footer>
+		<h1>my-u</h1>
+		<p class="about">my universe</p>
+		<p class="about">심리테스트를 통해 나에 대해 알아가고 찾아감으로써 나의 우주를 만들어 나가자!</p>
+	</footer>
+</body>
+
 </html>
