feature: 로그인 api 연결

--- a/src/login/login.html
+++ b/src/login/login.html
@@ -7,6 +7,36 @@
     <title>MyU_Login</title>
     <link rel="stylesheet" href="./login.css" />
     <script src="../../include.js" defer></script>
+
+    <script>
+      function login() {
+        if (!id.value) return alert('아이디를 입력하세요');
+        if (!password.value) return alert('비밀번호를 입력하세요');
+        const req = {
+          id: id.value,
+          password: password.value,
+        };
+        fetch('http://localhost:3000/user/login', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify(req),
+        })
+          .then((response) => response.json())
+          .then((res) => {
+            if (res.success) {
+              // 성공 시
+              location.href = '/';
+            } else {
+              alert(res.msg);
+            }
+          })
+          .catch((err) => {
+            console.error('로그인 중 에러 발생');
+          });
+      }
+    </script>
   </head>
   <body>
     <header data-include="../header/header.html"></header>
@@ -18,18 +48,20 @@
         </div>
         <div class="inputBox">
           <input
+            id="id"
             class="idInput"
             type="text"
             placeholder="아이디를 입력하세요"
           />
           <input
+            id="password"
             class="pwInput"
             type="password"
             placeholder="비밀번호를 입력하세요"
           />
         </div>
       </div>
-      <button class="loginBtn">로그인</button>
+      <button class="loginBtn" onclick="login()">로그인</button>
     </div>
     <footer data-include="../smallFooter/smallFooter.html"></footer>
   </body>
