feat: 운세뽑기 api 연결

--- a/src/luckydraw/luckydrawResult.html
+++ b/src/luckydraw/luckydrawResult.html
@@ -7,14 +7,32 @@
     <title>MyU_운세뽑기</title>
     <link rel="stylesheet" href="./luckydraw.css" />
     <script src="../../include.js" defer></script>
+    <script>
+      function draw() {
+        fetch("http://localhost:3000/etc/luckydraw", {
+          method: "GET",
+          headers: {
+            "Content-Type": "application/json",
+          },
+        })
+          .then((response) => response.json())
+          .then((res) => {
+            // 결과 값을 선택한 요소에 할당
+            var scoreElement = document.querySelector(".score");
+            scoreElement.textContent = res.luck.score;
+            var msgElement = document.querySelector(".text");
+            msgElement.textContent = res.luck.msg;
+          });
+      }
+    </script>
   </head>
   <body>
     <header data-include="../header/header.html"></header>
     <div class="container">
       <p class="title">오늘의 운세</p>
       <div class="resultContainer">
-        <p class="score">여기에 학점</p>
-        <p class="text">여기에 운세</p>
+        <p class="score"></p>
+        <p class="text"></p>
         <img
           src="../../image/luckydraw/003.png"
           alt="뽑기 이미지"
@@ -24,5 +42,9 @@
     </div>
 
     <footer data-include="../smallFooter/smallFooter.html"></footer>
+    <script>
+      // draw 함수 호출
+      draw();
+    </script>
   </body>
 </html>
