feat: 메인페이지 완 & 테스트1,2 결과페이지 공유하기 제외 완

--- a/src/clubResult/danceClub.html
+++ b/src/clubResult/danceClub.html
@@ -18,7 +18,7 @@
 			<div class="mypage">로그아웃</div>
 		</div>
 		<div class="body">
-			<div class="body_header"> 당신과 찰떡궁합 동아리는...?<br></div>
+			<div class="body_header2"> 당신과 찰떡궁합 동아리는...?<br></div>
 			<div class="resultName">댄스 동아리</div>
 			<div class="body_body">
 				<div class="body_left">
