--- a/src/main/main.html
+++ b/src/main/main.html
@@ -29,11 +29,14 @@
 		<div class="itemBox">
 			<div class="leftBox">
 				<img class="univImg" src="univImg.png" alt="">
-				<div class="univType">대학생 유형 테스트 <img class="arrow" src="arrow.png" alt=""></div>
+				<div class="univType" onclick="location.href='../campusLifeTest/test1.html'">대학생 유형 테스트 <img
+						class="arrow" src="arrow.png" alt=""></div>
 			</div>
 			<div class="rightBox">
 				<img class="rectangleImg" src="clubImg.png" alt="">
-				<div class="ready"> 동아리 테스트<img class="arrow" src="arrow.png" alt=""></div>
+				<div class="ready" onclick="location.href='../clubTest/test1.html'">동아리 테스트<img class="arrow"
+						src="arrow.png" alt=""></div>
+
 			</div>
 		</div>
 
