--- a/src/clubResult/computerClub.html
+++ b/src/clubResult/computerClub.html
@@ -6,6 +6,33 @@
 	<link href="clubResultPage.css" rel="stylesheet">
 	<link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
+	<!-- <script src="/shareLink.js"></script> -->
+	<script>
+		function copyLink() {
+			console.log("dddddd");
+			// 복사할 링크의 주소를 가져옵니다.
+			var link = "https://www.example.com"; // 여기에 공유할 링크를 입력하세요.
+
+			// 임시 textarea 엘리먼트를 생성하고 링크를 설정합니다.
+			var textarea = document.createElement('textarea');
+			textarea.value = link;
+
+			// body에 textarea를 추가하고 선택합니다.
+			document.body.appendChild(textarea);
+			textarea.select();
+
+			// 링크를 클립보드에 복사합니다.
+			document.execCommand('copy');
+
+			// textarea를 제거합니다.
+			document.body.removeChild(textarea);
+
+			// 복사 완료 메시지를 표시합니다.
+			alert("링크가 복사되었습니다.");
+		}
+	</script>
+
 </head>
 
 <body>
@@ -18,14 +45,14 @@
 			<div class="mypage">로그아웃</div>
 		</div>
 		<div class="body">
-			<div class="body_header"> 당신과 찰떡궁합 동아리는...?<br></div>
+			<div class="body_header2"> 당신과 찰떡궁합 동아리는...?<br></div>
 			<div class="resultName">IT 동아리</div>
 			<div class="body_body">
 				<div class="body_left">
 					<img src="computerImg.png" class="photo"></img>
 					<div class="body_footer">
 						<img src="share.png" class="shareImg"></img>
-						<p>공유하기</p>
+						<p onclick="copyLink() ">공유하기</p>
 					</div>
 				</div>
 				<div class="body_right">
