feat:결과페이지와 점수 로직 연결

--- a/src/clubTest/test1.html
+++ b/src/clubTest/test1.html
@@ -37,11 +37,11 @@
                     <img src="/image/clubTest/test1.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="calc(J,2)">
+                    <button class="answer" onclick="calc('J',2)">
                         아~ 이땐 이랬고 저땐 이랬구나? <br/>
                         올해가 잘 정리되어 있어서 뿌듯하다!
                     </button>
-                    <button class="answer"  onclick="calc(P,2)">
+                    <button class="answer"  onclick="calc('P',2)">
                         1~2월에는 이랬구나! <br/>
                         3월부터는... 어... 쓰다 말았네? 
                     </button>
