--- a/src/clubTest/test2.html
+++ b/src/clubTest/test2.html
@@ -24,11 +24,11 @@
                     <img src="/image/clubTest/test2.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer"  onclick="calc(E,3)">
+                    <button class="answer"  onclick="calc('E',3)">
                         참석해야지! 얼마나 재미있을까? <br/>
                         두근두근!                    
                     </button>
-                    <button class="answer"  onclick="calc(I,3)">
+                    <button class="answer"  onclick="calc('I',3)">
                         아직 아는 사람도 없고... <br/>
                         가면 기 빨릴 것 같은데 고민된다.                    
                     </button>
