--- a/src/clubTest/test4.html
+++ b/src/clubTest/test4.html
@@ -24,10 +24,10 @@
                     <img src="/image/clubTest/test4.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer"  onclick="calc(F,5)">
+                    <button class="answer"  onclick="calc('F',5)">
                         와 누구야? 왜 그러신대? 너 진짜 힘들겠다...
                     </button>
-                    <button class="answer"  onclick="calc(T,5)">
+                    <button class="answer"  onclick="calc('T',5)">
                         그럴 때는 직접 대화해서 해결해 보는 건 어때?
                     </button>
                 </div>
