--- a/src/clubTest/test6.html
+++ b/src/clubTest/test6.html
@@ -24,10 +24,10 @@
                     <img src="/image/clubTest/test6.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer"  onclick="calc(S,7)">
+                    <button class="answer"  onclick="calc('S',7)">
                         흥얼거리거나 속으로 따라 부른다.<br/>
                         ‘unforgiven... unforgiven ~ ‘</button>
-                    <button class="answer"  onclick="calc(N,7)">
+                    <button class="answer"  onclick="calc('N',7)">
                         노래에 맞추어 조금씩 리듬을 탄다. <br/>
                         Yo... music is my life...
                     </button>
