--- a/src/clubTest/test8.html
+++ b/src/clubTest/test8.html
@@ -24,11 +24,11 @@
                     <img src="/image/clubTest/test8.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer"  onclick="goTo(E)">
+                    <button class="answer"  onclick="goTo('E')">
                         음? 오히려 좋아. <br/>
                         발표... 맡겨 줘!
                     </button>
-                    <button class="answer" onclick="goTo(I)">
+                    <button class="answer" onclick="goTo('I')">
                         으... 발표 싫어. 제발 누군가 해 줘...
                     </button>
                 </div>
