--- a/src/clubTest/test3.html
+++ b/src/clubTest/test3.html
@@ -24,11 +24,11 @@
                     <img src="/image/clubTest/test3.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer"  onclick="calc(N,4)">
+                    <button class="answer"  onclick="calc('N',4)">
                         내일 늦으면 어떡하지? 혹시 등굣길에 <br/>
                         좀비가 나오면...  상상의 나래를 펼친다.                    
                     </button>
-                    <button class="answer"  onclick="calc(S,4)">
+                    <button class="answer"  onclick="calc('S',4)">
                         흠... 간단히 할 일을 계획하고 잠에 든다.                   
                      </button>
                 </div>
