--- a/src/clubTest/test5.html
+++ b/src/clubTest/test5.html
@@ -24,8 +24,8 @@
                     <img src="/image/clubTest/test5.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer"  onclick="calc(J,6)">구체적으로 길을 알려주며 함께 동행한다.</button>
-                    <button class="answer"  onclick="calc(P,6)">대충 말로만 설명한 후 갈 길을 간다.</button>
+                    <button class="answer"  onclick="calc('J',6)">구체적으로 길을 알려주며 함께 동행한다.</button>
+                    <button class="answer"  onclick="calc('P',6)">대충 말로만 설명한 후 갈 길을 간다.</button>
                 </div>
             </div>
             <div class="body_footer">
