--- a/src/clubTest/test7.html
+++ b/src/clubTest/test7.html
@@ -24,10 +24,10 @@
                     <img src="/image/clubTest/test7.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer"  onclick="calc(T,8)">
+                    <button class="answer"  onclick="calc('T',8)">
                         내 일에 직접적으로 상관없으니 별 관심없다.                    
                     </button>
-                    <button class="answer"  onclick="calc(F,8)">
+                    <button class="answer"  onclick="calc('F',8)">
                         적극적으로 기사를 찾아보고<br/>
                         해결책을 생각해 본다.</button>
                 </div>
