feat: index.html 수정

--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My universe</title>
-    <link rel="stylesheet" href="index.css" />
+    <!-- <link rel="stylesheet" href="./login.css" /> -->
     <script src="./include.js" defer></script>
   </head>
-  <body>
-    <!-- <header data-include="../src/header/header.html"></header> -->
-    <p class="title">2조 fronted</p>
-    <main data-include="./src/main/main.html"></main>
-    <footer data-include="./src/footer/footer.html"></footer>
+  <body
+    style="
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    "
+  >
+    <header
+      data-include="../src/header/header.html"
+      style="width: 70%; justify-content: center"
+    ></header>
+    <main data-include="../src/main/main.html"></main>
+    <!-- <footer data-include="./src/footer/footer.html"></footer> -->
   </body>
 </html>
