--- a/src/header/header.html
+++ b/src/header/header.html
@@ -19,35 +19,26 @@
       // });
     </script>
     <style>
-      .container {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 2%;
+      @font-face {
+        font-family: "Shrikhand";
+        src: url("../font/Shrikhand.ttf");
       }
 
       .header {
-        width: 73%;
+        width: 100%;
         height: 13%;
-        margin-top: 4%;
+        margin: 8% 0 8% -5%;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
       }
       .logo {
-        left: 0%;
-        right: 74.01%;
-        top: 0%;
-        bottom: 0%;
-
         font-family: "Shrikhand";
         font-style: italic;
         font-weight: 400;
         font-size: 80px;
         line-height: 117px;
-        display: flex;
-        align-items: center;
-        text-transform: capitalize;
         color: #191b41;
       }
 
@@ -118,7 +109,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="headerContainer">
       <div class="header">
         <a href="../main/main.html" class="link">
           <div class="logo">My-U</div>
